poll click works

--- a/src/poll/poll.tmpl
+++ b/src/poll/poll.tmpl
@@ -2,8 +2,9 @@ template Poll(var data) {
 <h2>Create Poll</h2>
 <fieldset>
 <legend>Legend</legend>
-<input type="text" var=namePoll>Name of the poll</input>
-<input type="text" var=question>Question</input>
+<input type="text" var="name">Name of the poll</input>
+<input type="text" var="question">Question</input>
+<button var="act">fest</button>
 </fieldset>
 	<div>
 		<table>
