--- a/src/static/client/Layout.tmpl
+++ b/src/static/client/Layout.tmpl
@@ -1,5 +1,6 @@
 template Layout(var panel) {
-  <div var=hello>
-    ${#EntityViewer(panel)}
-  </div>
+  <div var="container">
+  	${#EntityContainer()}
+  	${#EntityViewer(panel)}
+	</div>
 }
