--- a/src/static/client/entity_viewer.tmpl
+++ b/src/static/client/entity_viewer.tmpl
@@ -10,7 +10,7 @@ template EntityViewer(int number) {
 	}
 	
 	<fieldset>
-	    <legend>Symbol Display</legend>
+	    <legend id="my">Symbol Display</legend>
 	    <span class="viewBox" style="font-size: 1em;">&#x2724;</span>
 	    <span class="viewBox" style="font-size: 2em;">&#x2658;</span>
 	    <span class="viewBox" style="font-size: 3em;">&#x2620;</span>
